--- a/index.html
+++ b/index.html
@@ -9,21 +9,39 @@
 </head>
 <body>
     <main class = "container"> 
+       
         <h1>Weather Dashboard</h1>
 
         <form>
             <div class="mb-3">
-              <label for="search-input" class="form-label">Search a City</label>
-              <input type="search" class="form-control" id="search-input">
+                <label for="search-input" class="form-label">Search a City</label>
+                <input type="search" class="form-control" id="search-input">
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
 
-        <ul class="list-group"></ul> 
+        <div class="card">
+            <div class="card-body" id="weatherToday">
+            </div> 
+        </div>
+
+        <div class="card">
+            <div class="card-body" id="fiveDay">
+            </div> 
+        </div>
+
+        <div class="card">
+            <div class="card-body" id="searchHistory">
+                <h3>Search History</h3>
+                <h4 id="cityBtn"></h4>
+            </div> 
+        </div>
+        
     </main>    
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script> 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
     <script src="./Assets/script.js"></script>
 </body>
 </html>
